# CMakeList.txt : CMake project for PONG_Semestralka, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("PONG_Semestralka")

# Add source to this project's executable.
add_executable (PONG_Semestralka "PONG_Semestralka.cpp" "PONG_Semestralka.h")

# TODO: Add tests and install targets if needed.
